// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConfirmRemovePendingTransaction > should not render if transaction type is not available 1`] = `<DocumentFragment />`;

exports[`ConfirmRemovePendingTransaction > should render multisignature registration 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="ConfirmRemovePendingTransaction__Multisignature-Registration"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pb-24 pt-10 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-4 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="h-8 w-8 css-1hei9vx"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 text-lg font-bold md:text-2xl"
          >
            Remove Transaction
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <svg
              class="mx-auto my-8 max-w-52"
              fill="none"
              viewBox="0 0 208 105"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M133.017 68.66l11.586-11.587a6.048 6.048 0 0 0 0-8.554l-35.282-35.281a6.048 6.048 0 0 0-8.553 0L65.486 48.519a6.048 6.048 0 0 0 0 8.554l35.282 35.282a6.048 6.048 0 0 0 8.553 0l12.355-12.356m6.805-6.804l-2.684 2.683M91 42.527h27.501"
                stroke="#DE5846"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M107.697 38.598h-5.893a1.964 1.964 0 0 0-1.965 1.964v1.964h9.822v-1.964a1.962 1.962 0 0 0-1.964-1.964z"
                stroke="#DE5846"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M113.74 64.297a1.966 1.966 0 0 1-1.957 1.802H97.719a1.964 1.964 0 0 1-1.957-1.802l-1.815-21.77h21.607l-1.814 21.77z"
                fill="#FFF5F2"
                stroke="#DE5846"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M101.804 59.224v-9.822m5.893 9.822v-9.822"
                stroke="#DE5846"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M91.058 16.533l7.571-7.571a9.072 9.072 0 0 1 12.83 0l37.421 37.42a9.074 9.074 0 0 1 0 12.83l-37.421 37.42a9.071 9.071 0 0 1-12.83 0l-37.42-37.42a9.072 9.072 0 0 1 0-12.83l13.595-13.595m13.23-13.23l-9.828 9.828"
                stroke="#DBDEE5"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M30.546 16.545h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm43 88h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm-66.002-.002h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22.5 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-66h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0 22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm21.5-22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm103.883-.003h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-43.002 87.999h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm65.999 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-22 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm0-21.999h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-22.5 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm.001-66h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-.001 22h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-21.5-22h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7z"
                fill="#DBDEE5"
              />
            </svg>
            <div
              class="flex flex-col overflow-hidden rounded-xl"
            >
              <div
                class="css-rzhg83"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="circle-exclamation-mark"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        r="9"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 10.5v-5"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 14h0"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </g>
                  </svg>
                </div>
                <span>
                  Warning
                </span>
              </div>
              <div
                class="css-trjt6n"
              >
                Are you sure you want to remove Multisignature Registration from the transaction pool? This action cannot be undone.
              </div>
            </div>
            <form
              class="space-y-5"
              data-testid="Form"
            >
              <div
                class="mt-6"
              >
                <div
                  class="space-y-6"
                  data-testid="AuthenticationStep"
                >
                  <fieldset
                    class="flex min-w-0 flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="mnemonic"
                    >
                      Mnemonic
                    </label>
                    <div
                      class="css-n1b0kl"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1vs1awz"
                          data-testid="AuthenticationStep__mnemonic"
                          name="mnemonic"
                          type="password"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                        data-testid="Input__addon-end"
                      >
                        <div
                          class=""
                        >
                          <button
                            class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
                            data-ring-focus-margin="-m-1"
                            data-testid="InputPassword__toggle"
                            type="button"
                          >
                            <div
                              class="css-1i4b0eq"
                              height="20"
                              width="20"
                            >
                              <svg
                                id="eye"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                >
                                  <path
                                    d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                                  />
                                  <path
                                    d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                                  />
                                </g>
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </div>
              </div>
            </form>
            <div
              class="css-j6ajdm"
            >
              <button
                class="css-6419sw"
                data-testid="DeleteResource__cancel-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Cancel
                </div>
              </button>
              <button
                class="css-qrwjsp"
                data-testid="DeleteResource__submit-button"
                disabled=""
                type="submit"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg
                      id="trash"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                        />
                      </g>
                    </svg>
                  </div>
                  <span>
                    Delete
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConfirmRemovePendingTransaction > should render multisignature transaction 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="ConfirmRemovePendingTransaction__Transfer-Transaction"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pb-24 pt-10 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-4 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="h-8 w-8 css-1hei9vx"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 text-lg font-bold md:text-2xl"
          >
            Remove Transaction
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <svg
              class="mx-auto my-8 max-w-52"
              fill="none"
              viewBox="0 0 208 105"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M133.017 68.66l11.586-11.587a6.048 6.048 0 0 0 0-8.554l-35.282-35.281a6.048 6.048 0 0 0-8.553 0L65.486 48.519a6.048 6.048 0 0 0 0 8.554l35.282 35.282a6.048 6.048 0 0 0 8.553 0l12.355-12.356m6.805-6.804l-2.684 2.683M91 42.527h27.501"
                stroke="#DE5846"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M107.697 38.598h-5.893a1.964 1.964 0 0 0-1.965 1.964v1.964h9.822v-1.964a1.962 1.962 0 0 0-1.964-1.964z"
                stroke="#DE5846"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M113.74 64.297a1.966 1.966 0 0 1-1.957 1.802H97.719a1.964 1.964 0 0 1-1.957-1.802l-1.815-21.77h21.607l-1.814 21.77z"
                fill="#FFF5F2"
                stroke="#DE5846"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M101.804 59.224v-9.822m5.893 9.822v-9.822"
                stroke="#DE5846"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M91.058 16.533l7.571-7.571a9.072 9.072 0 0 1 12.83 0l37.421 37.42a9.074 9.074 0 0 1 0 12.83l-37.421 37.42a9.071 9.071 0 0 1-12.83 0l-37.42-37.42a9.072 9.072 0 0 1 0-12.83l13.595-13.595m13.23-13.23l-9.828 9.828"
                stroke="#DBDEE5"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M30.546 16.545h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm43 88h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm-66.002-.002h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22.5 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-66h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0 22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm21.5-22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm103.883-.003h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-43.002 87.999h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm65.999 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-22 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm0-21.999h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-22.5 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm.001-66h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-.001 22h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-21.5-22h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7z"
                fill="#DBDEE5"
              />
            </svg>
            <div
              class="flex flex-col overflow-hidden rounded-xl"
            >
              <div
                class="css-rzhg83"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="circle-exclamation-mark"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        r="9"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 10.5v-5"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 14h0"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </g>
                  </svg>
                </div>
                <span>
                  Warning
                </span>
              </div>
              <div
                class="css-trjt6n"
              >
                Are you sure you want to remove Transfer Transaction from the transaction pool? This action cannot be undone.
              </div>
            </div>
            <form
              class="space-y-5"
              data-testid="Form"
            >
              <div
                class="mt-6"
              >
                <div
                  class="space-y-6"
                  data-testid="AuthenticationStep"
                >
                  <fieldset
                    class="flex min-w-0 flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="mnemonic"
                    >
                      Mnemonic
                    </label>
                    <div
                      class="css-n1b0kl"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1vs1awz"
                          data-testid="AuthenticationStep__mnemonic"
                          name="mnemonic"
                          type="password"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                        data-testid="Input__addon-end"
                      >
                        <div
                          class=""
                        >
                          <button
                            class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
                            data-ring-focus-margin="-m-1"
                            data-testid="InputPassword__toggle"
                            type="button"
                          >
                            <div
                              class="css-1i4b0eq"
                              height="20"
                              width="20"
                            >
                              <svg
                                id="eye"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                >
                                  <path
                                    d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                                  />
                                  <path
                                    d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                                  />
                                </g>
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </div>
              </div>
            </form>
            <div
              class="css-j6ajdm"
            >
              <button
                class="css-6419sw"
                data-testid="DeleteResource__cancel-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Cancel
                </div>
              </button>
              <button
                class="css-qrwjsp"
                data-testid="DeleteResource__submit-button"
                disabled=""
                type="submit"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg
                      id="trash"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                        />
                      </g>
                    </svg>
                  </div>
                  <span>
                    Delete
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
